# tc-json-triage

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
.claude/agents/: Implementor.md  Planner.md  Reviewer.md  Security-Checker.md  Test-Specialist.md
.claude/skills/feature-builder/: SKILL.md
.claude/skills/thorough-review/: SKILL.md
data/: cwe_stride_map.json
docs/: initial-implementation-plan.md
src/tc_json_triage/: __init__.py  cli.py  models.py
src/tc_json_triage/llm/: correlator.py
src/tc_json_triage/mapping/: correlator.py  cwe_stride.py
src/tc_json_triage/output/: sarif_annotator.py  summary.py
src/tc_json_triage/parsers/: sarif.py  threat_model.py
tests/: test_cli.py  test_correlator.py  test_cwe_stride.py  test_output.py  test_sarif_parser.py  test_threat_model_parser.py
tests/fixtures/: sample.sarif  sample.tc.json
